change image name for showing on github

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <table cellspacing=15>
     <tr>
-      <td><img src="image/Abolfazl.png" width="200px" height="200px" alt="abolfazl soheilyfar"></td>
+      <td><img src="image/abolfazl.png" width="200px" height="200px" alt="abolfazl soheilyfar"></td>
       <td>
         <h1>Abolfazl Soheilyfar</h1>
         <p><em>This is a <strong><a href="https://www.instagram.com/p/BmvfATDj7yXWsudgLYu6U9cVFPdsp-4JLlpPA00/">new start</a></strong> for me</em> </p>
