add some lines on html

--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
   </table>
   <hr>
 
-  <h3>Books and Teaching</h3>
+  <h3>Learning Process</h3>
   <ul>
-    <li>comlete coruse of Webdeveloper</li>
-    <li>complete coruse of photoshop</li>
+    <li>HTML, CSS, and Javascript for Web Developers (Johns Hopkins University - Coursera)</li>
+    <li>Programming with JavaScript (Meta - Coursera)</li>
+    <li>The Full Stack (Meta - Coursera)</li>
+    <li>Agile Project Management (Google - Coursera)</li>
+    <li>The Complete 2023 Web Development Bootcamp (Udemy)</li>
+
   </ul>
 <hr>
   <h3>Work Expriance</h3>
